Refactored out MenuItem component and changed HeaderButton to use it. Added in some temporary menu styling to make sure everything is visible.

--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,7 @@ input[type=text].h2 {
     font-size : 1.75em;
     font-weight: 300;
 }
+
+#menu {
+    margin-top: 3em;
+}
